# game_server

./: Cargo.toml
src/: main.rs
src/game/: controller.rs  majiang_message.rs  majiang_model.rs  majiang_operation.rs  majiang_state.rs  mod.rs  player.rs
src/game/room/: mod.rs
src/server_net/: kafka_client.rs  message.rs  mod.rs
