[package]
name = "game_server"
version = "0.1.0"
authors = ["dalaoshe <dalaoshe@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
tokio = { version = "0.2.11", features = ["full"] }
serde = { version = "1.0.97", features = ["derive"] }
serde_bytes = { version = "0.10.5" }
serde_derive = "1.0.104"
bincode = "1.2.1"
chrono = "0.4.10"
redis = "0.15.1"
rdkafka = { version = "0.23.1" }
futures = "0.3.0"
